new header-footer from the scratch

--- a/Guess/CartAbandon/2/G_Email_CartAbandon_2_15941_CA.html
+++ b/Guess/CartAbandon/2/G_Email_CartAbandon_2_15941_CA.html
@@ -739,31 +739,6 @@ body.outlook p {
 
                   <!-- begin CONTENT -->
 
-<<<<<<< Updated upstream
-                      <table style="width: 100%">
-                        <tbody style="display: block">
-                          <tr style="display: block">
-=======
-<!--                       <table style="width: 100%">
-                        <tbody>
-                          <tr>
->>>>>>> Stashed changes
-                            <td>
-                              <table style="width: 100%">
-                                <tbody>
-                                  <tr>
-                                    <td>
-                                      <a href="http://www.guess.ca/en/">
-                                        <img src="http://s7d5.scene7.com/is/image/Guess/WG_Fall2016_04?$responsive_md$&wid=956" width="582" style="width:100%";>
-                                      </a>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table> -->                  <!-- begin CONTENT -->
-
             <! --- SECTION 1 ---->
 
                       <table id='section1' style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:inline-table !important;">
@@ -776,7 +751,7 @@ body.outlook p {
                                   <tr>
                                     <td>
                                       <p style="text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.25em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
-                                        ALMOST YOURS
+                                        DON'T MISS OUT
                                       </p>
                                     </td>
                                   </tr>
@@ -788,33 +763,54 @@ body.outlook p {
                                   <tr>
                                     <td>
                                       <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000;">
-                                        These are still waiting for you,
+                                        They're in your bag, but not "on hold".
                                       </p>
                                       <p style="text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000; margin-bottom: 50px;">
-                                        and are just a click away.
+                                        Get them before someone else does.
                                       </p>
                                     </td>
                                   </tr>
                                 </tbody>
                               </table>
-          <! ---- Single Image ---- >
-                              <table style='width:100%'>
+          <! ---- Double Image ---- >
+                              <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;">
                                 <tbody>
-                                  <tr>
-                                    <td style="text-align: center">
-                                      <a href="#">
-                                        <img style="margin-right: auto; margin-left: auto; width: 388px;" src="http://i.imgur.com/jnuH4rA.png">
-                                      </a>
+                                  <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
+                                    <td style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;">
+                                      <table style="width: 100%;">
+                                        <tbody>
+                                          <tr>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                            <td style="text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                              </a>
+                                            </td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
                                     </td>
                                   </tr>
                                 </tbody>
                               </table>
-          <! ---- Description ---- >
+          <! ---- Double Description ---- >
                               <table style='width:100%'>
                                 <tbody>
                                   <tr>
-                                    <td>
-                                      <p style="text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="vertical-align:top; text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
+                                        Guess connect smartwatch<br>in white
+                                      </p>
+                                      <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
+                                        $249.00
+                                      </p>
+                                    </td>
+                                    <td style="width: 50%; vertical-align:top">
+                                      <p style="vertical-align:top; text-align: center; margin-top: 15px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
                                         Charlene shirred dress
                                       </p>
                                       <p style="text-align: center; font-size: 15px;color: #000000; letter-spacing:.18em; margin-bottom: 50px; line-height: 16pt;">
@@ -886,13 +882,13 @@ body.outlook p {
                                       <table style="width: 100%;">
                                         <tbody>
                                           <tr>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
                                                 <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
                                                 <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
@@ -911,14 +907,14 @@ body.outlook p {
                                       <table style="width: 100%;">
                                         <tbody>
                                           <tr>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
-                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
-                                            <td style="padding-bottom: 4em;">
-                                              <a href="#">
-                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                            <td style="padding-bottom: 4em; text-align: center">
+                                              <a href="#" style="text-align: center">
+                                                <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                               </a>
                                             </td>
                                           </tr>
@@ -1116,16 +1112,22 @@ body.outlook p {
                                       <table class="twelve" style="background-color:#000000;background-image:none;background-repeat:repeat;background-position:top left;background-attachment:scroll;border-spacing:0;border-collapse:collapse;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:582px;">
                                         <tbody>
                                           <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
-                                            <td class="padding-top33-bottom20" style="padding-top:33px;padding-bottom:20px; width: 50%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
-                                              <p class="centered" style="display: block; text-align: center">
-                              <! ===== CHECK LINK FOR PRIVACY POLICY =====>
-                                                <a href="http://www.guess.ca/en/privacypolicy/" style="color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>PRIVACY POLICY</a>
-                                              </p>
-                                            </td>
-                                            <td class="last padding-top33-bottom20" style="width: 50%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
+                                            <td class="last padding-top33-bottom20" style="width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
                                               <p class="centered" style="display: block; text-align: center">
                               <! ===== CHECK LINK FOR CONTACT =====>
                                                 <a class="center" href='http://www.guess.ca/en/TermsAndConditions/' style="text-align: center; color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>CONTACT</a>
+                                              </p>
+                                            </td>
+                                            <td class="last padding-top33-bottom20" style="width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
+                                              <p class="centered" style="display: block; text-align: center">
+                              <! ===== CHECK LINK FOR APP =====>
+                                                <a class="center" href='https://itunes.apple.com/us/app/guess-jeans/id687484959' style="text-align: center; color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>GET THE APP</a>
+                                              </p>
+                                            </td>
+                                            <td class="padding-top33-bottom20" style="padding-top:33px;padding-bottom:20px; width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
+                                              <p class="centered" style="display: block; text-align: center">
+                              <! ===== CHECK LINK FOR PRIVACY POLICY =====>
+                                                <a href="http://www.guess.ca/en/privacypolicy/" style="color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>PRIVACY POLICY</a>
                                               </p>
                                             </td>
                                             <td class="expander" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;visibility:hidden;width:0px;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;">
