--- a/Guess/header-footer/US/New-Template-Guess-US-Default.html
+++ b/Guess/header-footer/US/New-Template-Guess-US-Default.html
@@ -946,7 +946,7 @@ body.outlook p {
                                             <td class="last padding-top33-bottom20" style="width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
                                               <p class="centered" style="display: block; text-align: center">
                               <! ===== CHECK LINK FOR CONTACT =====>
-                                                <a class="center" href='http://www.guess.ca/en/TermsAndConditions/' style="text-align: center; color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>CONTACT</a>
+                                                <a class="center" href='http://www.guess.com/en/TermsAndConditions/' style="text-align: center; color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>CONTACT</a>
                                               </p>
                                             </td>
                                             <td class="padding-top33-bottom20" style="padding-top:33px;padding-bottom:20px; width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
@@ -958,7 +958,7 @@ body.outlook p {
                                             <td class="padding-top33-bottom20" style="padding-top:33px;padding-bottom:20px; width: 33%; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:center;font-size:9px;line-height:12px;padding-top:33px;padding-bottom:20px;padding-left:0px;position:relative;padding-right:0px;">
                                               <p class="centered" style="display: block; text-align: center">
                               <! ===== CHECK LINK FOR PRIVACY POLICY =====>
-                                                <a href="http://www.guess.ca/en/privacypolicy/" style="color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>PRIVACY POLICY</a>
+                                                <a href="http://www.guess.com/en/privacypolicy/" style="color: #ffffff; text-decoration: none; letter-spacing:.36em; font-size: 13px;" target='_blank'>PRIVACY POLICY</a>
                                               </p>
                                             </td>
                                             <td class="expander" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;visibility:hidden;width:0px;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;">
