--- a/GuessKids/new-header-footer-guess-kids.html
+++ b/GuessKids/new-header-footer-guess-kids.html
@@ -17,7 +17,7 @@
     text-decoration: none;
     color: #333333;
   }
-  a img 
+  a img
   {
     border: 0 none;
   }
@@ -168,7 +168,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guess.ca/en/Account/Register?IsLoyalty=True" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-weight: bold; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://www.guess.ca/en/Account/Register?IsLoyalty=True" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -180,7 +180,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-weight: bold; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
                               #guesskids
                             </a>
                           </td>
