--- a/GuessFactory/new-header-footer-guess-factory.html
+++ b/GuessFactory/new-header-footer-guess-factory.html
@@ -9,6 +9,9 @@
     display:none;
     display:none!important;
   }
+  .JohnsonBox {
+    display: none!important;
+  }
   .ioslink999 a {
     text-decoration: underline;
     color: #999999;
@@ -17,13 +20,13 @@
     text-decoration: none;
     color: #333333;
   }
-  a img 
+  a img
   {
     border: 0 none;
   }
   @media only screen and (max-width: 600px){
     .preheader {
-      font-size: 1.5vw !important;
+      font-size: 1.1vw !important;
     }
     .fss {
       font-size: 2.3vw !important;
@@ -51,12 +54,14 @@
   }
   @media only screen and (max-width: 341px){
     .logo {
-      font-size: 7.8vw !important;
+      font-size: 7.5vw !important;
     }
   }
  </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
+    <span class="JohnsonBox" style="display: none!important;">Add this email to your favorites to get exclusive offers!!!
+    </span>
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -80,7 +85,7 @@
                   <td class="preheader" style="font-family: Arial, sans-serif; color: #666666; font-size: 9px; font-weight: 600; line-height: 12px; letter-spacing: .01em;">
                     To keep seeing us in your inbox, add
                       <a href="mailto:noreply@admarketing.guess.ca" style="color: #333333;">
-                        noreply@admarketing.guess.ca
+                        noreply@admarketing.guessfactory.com
                       </a>
                      to your address book.
                   </td>
@@ -102,7 +107,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top: 16px; padding-bottom: 16px;">
-                            <a class="logo" href="https://guessfactory.ca/en/" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
+                            <a class="logo" href="https://www.guessfactory.com/en" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
                               GUESS FACTORY
                             </a>
                           </td>
@@ -114,7 +119,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top: 8px; padding-bottom: 8px; text-align: center;">
-                            <a class= "fss" href="https://guessfactory.ca/en/" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a class= "fss" href="https://www.guessfactory.com/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
                             </a>
                           </td>
@@ -137,7 +142,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/women/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a class="buttons" href="https://www.guessfactory.com/en/Catalog/Browse/new-arrivals/women/?rd=0" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -149,7 +154,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://guessfactory.ca/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a class="buttons" href="https://www.guessfactory.com/en/catalog/browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -161,7 +166,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="http://www.guess.ca/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a class="buttons" href="https://www.guessfactory.com/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -173,7 +178,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guess.ca/en/Account/Register" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://www.guessfactory.com/en/Account/RegisterLoyalty?" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -185,7 +190,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://www.guessfactory.com/en" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
                               #LOVEGUESS
                             </a>
                           </td>
@@ -234,12 +239,12 @@
                       <tbody>
                         <tr>
                           <td style="width:50%; color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: right; padding-right:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a class="corporate" href="https://www.guessfactory.com/en/customercare/privacytechsupport/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="width:50%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-left:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a class="corporate" href="service@guessfactory.com" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -262,8 +267,8 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="http://www.guess.ca/en/" style="color:#333333;">
-                          GUESS.ca
+                        <a href="https://www.guessfactory.com/en" style="color:#333333;">
+                          GUESSFACTORY.com
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
                       <span class="ioslink333">
@@ -274,8 +279,8 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="http://www.guess.ca/customercare/returns" style="color:#333333;">
-                          GUESS.ca/customercare/returns
+                        <a href="https://www.guessfactory.com/en/customercare/returns/" style="color:#333333;">
+                          GUESSfactory.com/en/customercare/returns/
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
@@ -285,12 +290,12 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS.ca
+                      <a href="https://www.guessfactory.com/en" style="color:#333333;">
+                        GUESSFACTORY.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS
+                       <a href="https://www.guessfactory.com/en" style="color:#333333;">
+                        GUESS FACTORY
                       </a>
                        stores in the United States or Canada or at
                        <span class="ioslink333">
@@ -301,11 +306,11 @@
                     <p style="color: #666666; font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
                       To ensure you always receive emails from GUESS, including the latest styles and exclusive events, add
                       <a href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
-                        noreply@admarketing.guess.ca
+                        noreply@admarketing.guessfactory.com
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://guess.ca/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a href="https://www.guessfactory.com/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
