update new header-footer for guessfactory and guess with johnson box and fixed fss size on iphone

--- a/Guess/header-footer/new-header-footer-guess.html
+++ b/Guess/header-footer/new-header-footer-guess.html
@@ -9,6 +9,9 @@
     display:none;
     display:none!important;
   }
+  .JohnsonBox {
+    display: none!important;
+  }
   .ioslink999 a {
     text-decoration: underline;
     color: #999999;
@@ -23,7 +26,7 @@
   }
   @media only screen and (max-width: 600px){
     .preheader {
-      font-size: 1.5vw !important;
+      font-size: 1.1vw !important;
     }
     .fss {
       font-size: 2.3vw !important;
@@ -37,10 +40,10 @@
   }
     @media only screen and (max-width: 380px){
     .preheader {
-      font-size: 1.5vw !important;
+      font-size: 1.2vw !important;
     }
     .fss {
-      font-size: 3.6vw !important;
+      font-size: 3.2vw !important;
     }
     .buttons {
       font-size: 4.7vw !important;
@@ -52,6 +55,8 @@
  </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
+    <span class="JohnsonBox" style="display: none!important;">Add this email to your favorites to get exclusive offers!!!
+    </span>
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
