--- a/Guess/header-footer/new-header-footer-guess.html
+++ b/Guess/header-footer/new-header-footer-guess.html
@@ -126,7 +126,9 @@
               </tbody>
             </table>
 <! ----- End of HEADER ----- !>
-<! ---- Content Goes Here ---- !>
+
+<! ---- CONTENT GOES HERE ---->
+
 <! ----- Footer ----- !>
             <table style="width: 100%">
               <tbody>
