adding space to cartabandon 1 on outlook on top of the title

--- a/Guess/CartAbandon/1/New_G_Email_CartAbandon_1_15941_US.html
+++ b/Guess/CartAbandon/1/New_G_Email_CartAbandon_1_15941_US.html
@@ -37,25 +37,31 @@
     .corporate {
       font-size: 2.2vw !important;
     }
+    .title {
+      font-size: 10vw !important;
+    }
   }
-    @media only screen and (max-width: 380px){
+    @media only screen and (max-width: 370px){
     .preheader {
-      font-size: 1.2vw !important;
+      font-size: 2.9vw !important;
     }
     .fss {
-      font-size: 3.2vw !important;
+      font-size: 5.5vw !important;
     }
     .buttons {
-      font-size: 4.7vw !important;
+      font-size: 6.7vw !important;
     }
     .corporate {
-      font-size: 2.2vw !important;
+      font-size: 4.5vw !important;
+    }
+    .title {
+      font-size: 14vw !important;
     }
   }
  </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
-    <span class="JohnsonBox" style="display: none!important;">Add this email to your favorites to get exclusive offers!!!
+    <span class="JohnsonBox" style="display: none!important;">Your closet asked us to remind you!!!
     </span>
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -113,7 +119,7 @@
                     <table style="width: 100%; border-top-style: solid; border-top-color: #666666; border-top-width: 1px; border-bottom-color: #666666; border-bottom-style: solid; border-bottom-width: 1px;">
                       <tbody>
                         <tr>
-                          <td style="padding-top:11px; padding-bottom:11px; text-align: center;">
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; padding-top:11px; padding-bottom:11px; text-align: center;">
                             <a class= "fss" href="http://shop.guess.com/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $99+
                             </a>
@@ -136,9 +142,9 @@
                       <tbody>
 <! ---- Title ---- >
                         <tr>
-                          <td>
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.25em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
-                              ALMOST YOURS
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;padding-top: 50px;">
+                            <p class="title" style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.25em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
+                              <spam>ALMOST YOURS</spam>
                             </p>
                           </td>
                         </tr>
@@ -148,7 +154,7 @@
                     <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td>
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
                             <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000;">
                               These are still waiting for you,
                             </p>
@@ -175,7 +181,7 @@
                     <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td>
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
                             <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 30px; margin-bottom: 20px; font-size: 15px;color: #000000; letter-spacing:.18em; text-transform: uppercase; line-height: 16pt;">
                               Charlene shirred dress
                             </p>
@@ -192,7 +198,7 @@
                         <tr>
                           <td style='width:98px'>
                           </td>
-                          <td style="text-align: center;border-spacing:0;border-collapse:collapse; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
+                          <td style="text-align: center; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
                             <a href="#" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000;">
                               <spam>COMPLETE ORDER</spam>
                             </a>
